Добавлена возможность добавление сууперпользователя для CI/CD, HTML шаблоны, JS файлы, исправлены представления

--- a/example.env
+++ b/example.env
@@ -1,15 +1,20 @@
-# Django settings
+# Django настройки
 SECRET_KEY=your-secret-key-here
 DEBUG=True
 DJANGO_ALLOWED_HOSTS=*
 
-# Database settings
+# БД настройки
 POSTGRES_DB=cafe_sync
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
-# Internationalization
+# Региональные настройки
 LANGUAGE_CODE=ru-ru
 TIME_ZONE=Europe/Moscow
+
+# CI/CD добавление админа
+DJANGO_SUPERUSER_EMAIL=admin@anxnas.ru
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_PASSWORD=your-password
