--- a/example.env
+++ b/example.env
@@ -18,3 +18,8 @@ TIME_ZONE=Europe/Moscow
 DJANGO_SUPERUSER_EMAIL=admin@anxnas.ru
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_PASSWORD=your-password
+
+# Настройки Uvicorn
+UVICORN_WORKERS=4
+UVICORN_LOG_LEVEL=info
+UVICORN_RELOAD=True
