--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,6 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
     restart: always
 
   backend:
@@ -19,9 +14,9 @@ services:
     restart: always
     depends_on:
       db:
-        condition: service_healthy
+        condition: service_started
     volumes:
-      - static_value:/app/static/
+      - static_value:/app/staticfiles/
       - media_value:/app/media/
     env_file:
       - ./.env
@@ -41,7 +36,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/app/static/
+      - static_value:/app/staticfiles/
       - media_value:/app/media/
     depends_on:
       - backend
