--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,11 +2,6 @@ upstream cafe_sync {
     server backend:8000;
 }
 
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    '' close;
-}
-
 server {
     listen 80;
     server_name localhost;
@@ -15,33 +10,19 @@ server {
 
     # Статические файлы
     location /static/ {
-        alias /app/static/;
-        expires 30d;
-        access_log off;
-        add_header Cache-Control "public, no-transform";
+        alias /app/staticfiles/;
     }
 
     # Медиа файлы
     location /media/ {
         alias /app/media/;
-        expires 30d;
-        access_log off;
-        add_header Cache-Control "public, no-transform";
     }
 
-    # Основной прокси-пасс для ASGI
     location / {
         proxy_pass http://cafe_sync;
-        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # WebSocket support
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
     }
-} 
+}
