--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = cafe_sync.settings
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
+python_files = tests.py test_*.py *_tests.py
 addopts = -v --tb=short --strict-markers
 markers =
-    slow: marks tests as slow
-    integration: marks tests as integration tests
-filterwarnings =
-    ignore::django.utils.deprecation.RemovedInDjango51Warning
-    ignore::DeprecationWarning
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests 
